k8s/production/09-lubelogger-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lubelogger
  namespace: lubelogger
  labels:
    app.kubernetes.io/name: lubelogger
<<<<<<< HEAD
    app.kubernetes.io/component: app
=======
    app.kubernetes.io/component: application
>>>>>>> 1289601 (fix: fixed traefik)
    app.kubernetes.io/part-of: lubelogger
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: lubelogger
    app.kubernetes.io/component: app
    app.kubernetes.io/part-of: lubelogger
  ports:
    - name: http
      port: 80
      targetPort: http
